--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
-
+import Layout from '../layouts/layout.astro'
+import Header from '../components/Header.astro'
+import Main from '../components/Main.astro'
+import '../styles/global.css'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+	<Header />
+	<Main />
+	<footer>
+
+	</footer>
+</Layout>
