--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,33 +1,33 @@
+---
+import Bienvenida from './Bienvenida.astro';
+import Descripcion from './Descripcion.astro';
+import Ponentes from './Ponentes.astro';
+import Cronograma from './Cronograma.astro';
+import Auspiciadores from './Auspiciadores.astro';
+---
 <main class="flex flex-col items-center justify-center">
     <div class="w-full h-screen flex items-center justify-center bg-green-100">
         <img src="/src/assets/bg-congreso.jpg" alt="portada" class="w-full h-full object-cover" />
     </div>
-    <div class="w-full flex flex-col justify-center items-center py-6 px-4 bg-gray-200">
-        <div class="w-7xl flex flex-col justify-center items-center">
-            <h1 class="text-4xl font-bold text-gray-800">Bienvenido al Congreso Internacional de Ingeniería Informática y Sistemas</h1>
-            <p class="mt-4 text-lg text-gray-600">Explora, aprende y conecta con expertos en el campo de la ingeniería de sistemas.</p>
+    <div class="w-2xl absolute top-1/2 left-1/3 transform -translate-x-1/2 -translate-y-1/2 flex flex-col justify-baseline items-center py-6 px-4 bg-transparent gap-2">
+        <h1 class="text-2xl font-bold text-white">XXVI Congreso Internacional de Ingeniería</h1>
+        <h1 class="text-2xl font-bold text-white">Informática y Sistemas</h1>
+        <h1 class="text-3xl font-bold text-white mt-4">INTELIGENCIA ARTIFICIAL</h1>
+        <h1 class="text-4xl font-bold text-[#E9A20F] mt-4">RETOS Y OPORTUNIDADES</h1>
+        <div class="w-12 h-12 flex items-center justify-center gap-4 mt-2">
+            <img src="/public/Peru.svg" alt="Peru">
+            <img src="/public/Chile.svg" alt="Chile">
+            <img src="/public/Argentina.svg" alt="Argentina">
+            <img src="/public/Puerto_Rico.svg" alt="Puerto Rico">
+            <img src="/public/Japan.svg" alt="Japan">
         </div>
+        <button class="bg-[#00A6CC] text-lg text-white px-10 py-3 rounded-lg font-semibold hover:bg-[#024059] transition-colors duration-500 hover:scale-105 cursor-pointer mt-6">Inscribirse</button>
     </div>
-    <div class="flex flex-row justify-center items-center gap-6 mt-4">
-        <div class="w-4xl items-center justify-center mx-6">
-            <h2 class="text-2xl font-bold text-gray-800">Acerca del evento</h2>
-            <p>
-                La cuarta edición del Congreso Internacional de Ingeniería: Industria 4.0 tiene como propósito reforzar las necesidades de atención y tendencias en el desarrollo adaptativo, colaborativo y resiliente de la evolución digital disruptiva, dividida en cuatro ejes temáticos, para su aplicación y proyección. 1) Smart City, 2) Inteligencia Artificial, 3) Digitalización de Información y 4) Liderazgo 4.0
-            </p>
-            <p>
-                El evento reunirá a especialistas de países como: Japón, Alemania, España, Brasil, México, Colombia, Chile, Paraguay, Perú entre otros, quienes presentarán los temas de su especialidad con un análisis constructivo sobre la revolución 4.0, en investigaciones, proyectos, empresas y servicios en general.
-            </p>
-            <div class="items-center justify-center mt-6">
-                <h2 class="text-2xl font-bold text-gray-800">Fecha y Lugar</h2>
-                <p>Fecha: 15 de noviembre de 2023</p>
-                <p>Lugar: Universidad Nacional de San Agustín de Arequipa, Perú</p>
-            </div>
-        </div>
-        <div class="items-center justify-center mx-6">
-            <img src="/src/assets/Congreso_01.jpg" alt="congreso" class="w-80 h-80 object-cover rounded-lg" />
-        </div>
-    </div>
-    
+    <Bienvenida />
+    <Descripcion />
+    <Ponentes />
+    <Cronograma />
+    <Auspiciadores />
 </main>
        
     
