--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,7 +10,7 @@ const links : {name:string, href:string}[] = [
 ];
 ---
 
-<header class="fixed w-full h-15 flex justify-center items-center bg-gray-800 text-white">
+<header class="fixed w-full z-10 h-15 flex justify-center items-center bg-[#024059] text-white">
 <nav class="w-7xl my-2 flex justify-between items-center">
     <div class="flex flex-wrap">
         <img src={Logo.src} width="150" height="50" alt="logo">
