--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,12 @@
 import Layout from '../layouts/layout.astro'
 import Header from '../components/Header.astro'
 import Main from '../components/Main.astro'
+import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 ---
 
 <Layout>
 	<Header />
 	<Main />
-	<footer>
-
-	</footer>
+	<Footer />
 </Layout>
