--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -4,25 +4,10 @@ import Descripcion from './Descripcion.astro';
 import Ponentes from './Ponentes.astro';
 import Cronograma from './Cronograma.astro';
 import Auspiciadores from './Auspiciadores.astro';
+import Landing from './Landing.astro';
 ---
 <main class="flex flex-col items-center justify-center">
-    <div class="w-full h-screen flex items-center justify-center bg-green-100">
-        <img src="/src/assets/bg-congreso.jpg" alt="portada" class="w-full h-full object-cover" />
-    </div>
-    <div class="w-2xl absolute top-1/2 left-1/3 transform -translate-x-1/2 -translate-y-1/2 flex flex-col justify-baseline items-center py-6 px-4 bg-transparent gap-2">
-        <h1 class="text-2xl font-bold text-white">XXVI Congreso Internacional de Ingeniería</h1>
-        <h1 class="text-2xl font-bold text-white">Informática y Sistemas</h1>
-        <h1 class="text-3xl font-bold text-white mt-4">INTELIGENCIA ARTIFICIAL</h1>
-        <h1 class="text-4xl font-bold text-[#E9A20F] mt-4">RETOS Y OPORTUNIDADES</h1>
-        <div class="w-12 h-12 flex items-center justify-center gap-4 mt-2">
-            <img src="/public/Peru.svg" alt="Peru">
-            <img src="/public/Chile.svg" alt="Chile">
-            <img src="/public/Argentina.svg" alt="Argentina">
-            <img src="/public/Puerto_Rico.svg" alt="Puerto Rico">
-            <img src="/public/Japan.svg" alt="Japan">
-        </div>
-        <button class="bg-[#00A6CC] text-lg text-white px-10 py-3 rounded-lg font-semibold hover:bg-[#024059] transition-colors duration-500 hover:scale-105 cursor-pointer mt-6">Inscribirse</button>
-    </div>
+    <Landing />
     <Bienvenida />
     <Descripcion />
     <Ponentes />
