[ADD] Creación de las rutas dinamicas de los talleres

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -7,11 +7,11 @@
     <h1 class="text-5xl font-bold text-white mt-4">INTELIGENCIA ARTIFICIAL</h1>
     <h1 class="text-5xl font-bold text-[#E9A20F] mt-4">RETOS Y OPORTUNIDADES</h1>
     <div class="flex items-center justify-center gap-4 my-4">
-        <img src="/public/Peru.svg" alt="Peru" class="w-12 h-12">
-        <img src="/public/Chile.svg" alt="Chile" class="w-12 h-12">
-        <img src="/public/Argentina.svg" alt="Argentina" class="w-12 h-12">
-        <img src="/public/Puerto_Rico.svg" alt="Puerto Rico" class="w-12 h-12">
-        <img src="/public/Japan.svg" alt="Japan" class="w-12 h-12">
+        <img src="/Peru.svg" alt="Peru" class="w-12 h-12">
+        <img src="/Chile.svg" alt="Chile" class="w-12 h-12">
+        <img src="/Argentina.svg" alt="Argentina" class="w-12 h-12">
+        <img src="/Puerto_Rico.svg" alt="Puerto Rico" class="w-12 h-12">
+        <img src="/Japan.svg" alt="Japan" class="w-12 h-12">
     </div>
     <button class="bg-[#00A6CC] text-2xl text-white px-10 py-3 rounded-lg font-semibold hover:bg-[#024059] transition-colors duration-500 hover:scale-105 cursor-pointer mt-6">Inscribirse</button>
 </div>
