--- a/src/components/Ponentes.astro
+++ b/src/components/Ponentes.astro
@@ -4,49 +4,49 @@ const ponentes = [
         nombre: "Ph.D. Kenji Nakamura",
         imagen: "../src/assets/kenji_nakamura.jpg",
         titulo: "PhD en Políticas Públicas en la Universidad Hanyang, Seúl",
-        pais: "/public/Japan.svg"
+        pais: "/Japan.svg"
     },
     {
         nombre: "Ph.D. Shinobu Fujimoto",
         imagen: "../src/assets/Shinobu_Fujimoto.jpg",
         titulo: "PhD en Ciencias Estadísticas en la Universidad Meiji, Tokio",
-        pais: "/public/Japan.svg"
+        pais: "/Japan.svg"
     },
     {
         nombre: "Mg. Diego Vidal Campos",
         imagen: "../src/assets/Diego_Vidal_Campos.jpg",
         titulo: "Magíster en Ingeniería Informática en la Pontificia Universidad Católica, Argentina",
-        pais: "/public/Argentina.svg"
+        pais: "/Argentina.svg"
     },
     {
         nombre: "Mg. Maria Salazar Rodriguez",
         imagen: "/src/assets/Maria_Salazar_Rodriguez.jpg",
         titulo: "Magíster en Ciencias de la Computación e Informática en la Pontificia Universidad Católica, Argentina",
-        pais: "/public/Argentina.svg"
+        pais: "/Argentina.svg"
     },
     {
         nombre: "Dr. Ricardo Sanchez Torres",
         imagen: "../src/assets/Ricardo_Sanchez_Torres.jpg",
         titulo: "Doctor en Ingeniería en Informática en la Universidad Técnica Federico Santa María, Chile",
-        pais: "/public/Chile.svg"
+        pais: "/Chile.svg"
     },
     {
         nombre: "Mg. Pedro Robles Diaz",
         imagen: "/src/assets/Pedro_Robles_Diaz.jpg",
         titulo: "Mg. in Computer Science de la Universidad Interamericana, Puerto Rico",
-        pais: "/public/Puerto_Rico.svg"
+        pais: "/Puerto_Rico.svg"
     },
     {
         nombre: "Mg. Leonardo Mirabal Cruz",
         imagen: "/src/assets/Leonardo_Mirabal_Cruz.jpg",
         titulo: "Magíster en Ingeniería Informática de la Universidad Católica, Puerto Rico",
-        pais: "/public/Puerto_Rico.svg"
+        pais: "/Puerto_Rico.svg"
     },
     {
         nombre: "Mg. Ernesto Mauro Suarez Lopez",
         imagen: "/src/assets/Ernesto_Suarez.webp",
         titulo: "Magíster en Tecnología de la Información con Especialización en Ingeniería Web en la Universidad Macquarie, Australia",
-        pais: "/public/Peru.svg"
+        pais: "/Peru.svg"
     },
 ]
 ---
