--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ const links : {name:string, href:string}[] = [
     { name: 'PRINCIPAL', href: '/' },
     { name: 'PONENTES', href: '/about' },
     { name: 'CRONOGRAMA', href: '/contact' },
-    { name: 'TALLERES', href: '/blog' },
+    { name: 'TALLERES', href: '/workshops' },
     { name: 'CONCURSOS', href: '/blog' },
     { name: 'INSCRIPCIÓN', href: '/blog' },
 ];
