--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="w-full h-15 flex justify-center items-center bg-gray-800 text-white">
-    <div>
+<footer class="w-full h-auto mx-auto py-2 flex justify-center items-center bg-gray-800 text-white">
+    <div class="flex justify-center items-center">
         <p>Copyright © {year}, Escuela Profesional de Ingeniería de Sistemas - Universidad de San Martín de Porres de Arequipa.</p>
     </div>
 </footer>
