--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,17 +1,19 @@
-<div class="w-full h-screen flex items-center justify-center bg-green-100">
-    <img src="/src/assets/bg-congreso.jpg" alt="portada" class="w-full h-full object-cover" />
-</div>
-<div class="w-2xl absolute top-1/2 left-1/3 transform -translate-x-1/2 -translate-y-1/2 flex flex-col justify-baseline items-center py-6 px-4 bg-transparent gap-2">
-    <h1 class="text-3xl font-bold text-white">XXVI Congreso Internacional de Ingeniería</h1>
-    <h1 class="text-3xl font-bold text-white">Informática y Sistemas</h1>
-    <h1 class="text-5xl font-bold text-white mt-4">INTELIGENCIA ARTIFICIAL</h1>
-    <h1 class="text-5xl font-bold text-[#E9A20F] mt-4">RETOS Y OPORTUNIDADES</h1>
-    <div class="flex items-center justify-center gap-4 my-4">
-        <img src="/Peru.svg" alt="Peru" class="w-12 h-12">
-        <img src="/Chile.svg" alt="Chile" class="w-12 h-12">
-        <img src="/Argentina.svg" alt="Argentina" class="w-12 h-12">
-        <img src="/Puerto_Rico.svg" alt="Puerto Rico" class="w-12 h-12">
-        <img src="/Japan.svg" alt="Japan" class="w-12 h-12">
+<section class="w-full h-screen flex items-center justify-center bg-green-100" id="inicio">
+    <div class="w-full h-screen flex items-center justify-center bg-green-100">
+        <img src="/src/assets/bg-congreso.jpg" alt="portada" class="w-full h-full object-cover" />
     </div>
-    <button class="bg-[#00A6CC] text-2xl text-white px-10 py-3 rounded-lg font-semibold hover:bg-[#024059] transition-colors duration-500 hover:scale-105 cursor-pointer mt-6">Inscribirse</button>
-</div>
+    <div class="w-2xl absolute top-1/2 left-1/3 transform -translate-x-1/2 -translate-y-1/2 flex flex-col justify-baseline items-center py-6 px-4 bg-transparent gap-2">
+        <h1 class="text-3xl font-bold text-white">XXVI Congreso Internacional de Ingeniería</h1>
+        <h1 class="text-3xl font-bold text-white">Informática y Sistemas</h1>
+        <h1 class="text-5xl font-bold text-white mt-4">INTELIGENCIA ARTIFICIAL</h1>
+        <h1 class="text-5xl font-bold text-[#E9A20F] mt-4">RETOS Y OPORTUNIDADES</h1>
+        <div class="flex items-center justify-center gap-4 my-4">
+            <img src="/Peru.svg" alt="Peru" class="w-12 h-12">
+            <img src="/Chile.svg" alt="Chile" class="w-12 h-12">
+            <img src="/Argentina.svg" alt="Argentina" class="w-12 h-12">
+            <img src="/Puerto_Rico.svg" alt="Puerto Rico" class="w-12 h-12">
+            <img src="/Japan.svg" alt="Japan" class="w-12 h-12">
+        </div>
+        <button class="bg-[#024059] text-2xl text-white px-10 py-3 rounded-lg font-semibold hover:bg-[#00A6CC] transition-colors duration-500 hover:scale-105 cursor-pointer mt-6">Inscribirse</button>
+    </div>
+</section>
