--- a/src/components/Ponentes.astro
+++ b/src/components/Ponentes.astro
@@ -51,8 +51,8 @@ const ponentes = [
 ]
 ---
 
-<section class="w-full py-16 bg-[#020617] text-white">
-    <div class="max-w-7xl mx-auto px-4">
+<section class="w-full bg-[#020617] text-white py-16" id="ponentes">
+    <div class="max-w-7xl mx-auto ">
         <div class="text-center mb-12">
             <h2 class="text-5xl font-bold mb-4">
                 Nuestros <span class="text-[#00A6CC]">Ponentes</span>
