--- a/src/pages/workshops/index.astro
+++ b/src/pages/workshops/index.astro
@@ -16,9 +16,8 @@ const workshops = await getCollection('workshops');
             <h1 class="text-5xl font-bold text-center text-[#e2d51e] pb-6">TALLERES</h1>
             <p class="text-2xl text-center">"Explora una variedad de talleres diseñados para enriquecer tu aprendizaje y potenciar tus habildades. ¡Insribete hoy y no te pierdas la oportunidad de crecer junto a nosotros!.</p>
         </div> 
-
     </section>
-    <section class="w-full pt-10  bg-[#020617] text-white">   
+    <section class="w-full py-10  bg-[#020617] text-white">   
         <h2 class="text-4xl mb-6 font-bold text-center">¡Únete a nuestros Talleres!</h2>
         {workshops.map((workshop: CollectionEntry<'workshops'>) => (
             <Talleres
@@ -30,6 +29,8 @@ const workshops = await getCollection('workshops');
                 requirements={workshop.data.requirements}
                 image={workshop.data.image}
                 tags={workshop.data.tags}
+                name={workshop.data.name}
+                photo={workshop.data.photo}
                 url={workshop.data.url}
             />
         ))}
